--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Verified Electronics — Tools</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Verified Electronics — Tools</title>
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
     :root{
@@ -73,7 +73,7 @@
         </div>
         <div class="desc">Generate branded PDFs with VAT, delivery terms, currency & totals.</div>
         <div class="row">
-          <a class="cta" href="sales-order/index.html">Open tool →</a>
+          <a class="cta" href="./so-confirmation/index.html">Open tool →</a>
           <span class="tag">Internal</span>
         </div>
       </article>
@@ -88,7 +88,7 @@
         </div>
         <div class="desc">Search parts, import CSV, and view supplier counts & availability.</div>
         <div class="row">
-          <a class="cta" href="excess-checker/index.html">Open tool →</a>
+          <a class="cta" href="./excess-checker/index.html">Open tool →</a>
           <span class="tag">Internal</span>
         </div>
       </article>
@@ -103,7 +103,7 @@
         </div>
         <div class="desc">Generate a clean, modern PDF certificate with PO refs, lot numbers, date codes and dates.</div>
         <div class="row">
-          <a class="cta" href="coc/index.html">Open tool →</a>
+          <a class="cta" href="./coc.index.html">Open tool →</a>
           <span class="tag">Internal</span>
         </div>
       </article>
@@ -171,6 +171,7 @@
   </div>
 </body>
 </html>
+
 
 
 
