--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </header>
 
-    <!-- Active tools -->
+    <!-- Available now -->
     <h2 class="section-title">Available now</h2>
     <div class="grid">
       <!-- Sales Order / Invoice -->
@@ -122,6 +122,21 @@
         <div class="desc">Upload Word/PDF, add signature/initials/date stamps, and download a signed PDF.</div>
         <div class="row">
           <a class="cta" href="./sign/index.html">Open tool →</a>
+          <span class="tag">Internal</span>
+        </div>
+      </article>
+
+      <!-- Company Info -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Company Info</h3>
+        </div>
+        <div class="desc">Addresses, VAT numbers, bank account details, and certificates (centralised).</div>
+        <div class="row">
+          <a class="cta" href="./company-info/index.html">Open tool →</a>
           <span class="tag">Internal</span>
         </div>
       </article>
@@ -193,6 +208,7 @@
   </div>
 </body>
 </html>
+
 
 
 
