--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
           <span class="tag">Internal</span>
         </div>
       </article>
+
+      <!-- PDF Editor -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">PDF Editor</h3>
+        </div>
+        <div class="desc">Edit PDFs in-browser: whiteout, text, shapes, highlights — then download the edited PDF.</div>
+        <div class="row">
+          <a class="cta" href="./pdf-editor/index.html">Open tool →</a>
+          <span class="tag">Internal</span>
+        </div>
+      </article>
     </div>
 
     <!-- Coming soon -->
@@ -175,7 +190,7 @@
         </div>
       </article>
 
-      <!-- Document Editor -->
+      <!-- Document Editor (templates) -->
       <article class="card">
         <div class="top">
           <div class="logo-badge">
@@ -208,6 +223,7 @@
   </div>
 </body>
 </html>
+
 
 
 
