--- a/index.html
+++ b/index.html
@@ -234,10 +234,41 @@
           <span class="tag soon">Coming soon</span>
         </div>
       </article>
+
+      <!-- Purchasing Requests -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Purchasing Requests</h3>
+        </div>
+        <div class="desc">Create, track and approve buy requests with supplier quotes and attachments.</div>
+        <div class="row">
+          <span class="cta" style="opacity:.6;pointer-events:none">Open tool →</span>
+          <span class="tag soon">Coming soon</span>
+        </div>
+      </article>
+
+      <!-- Open Sales Orders -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Open Sales Orders</h3>
+        </div>
+        <div class="desc">Live view of open SOs with status, delivery dates, and fulfillment progress.</div>
+        <div class="row">
+          <span class="cta" style="opacity:.6;pointer-events:none">Open tool →</span>
+          <span class="tag soon">Coming soon</span>
+        </div>
+      </article>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
