--- a/index.html
+++ b/index.html
@@ -264,10 +264,26 @@
           <span class="tag soon">Coming soon</span>
         </div>
       </article>
+
+      <!-- Auto IC Source Uploader -->
+      <article class="card">
+        <div class="top">
+          <div class="logo-badge">
+            <img src="https://raw.githubusercontent.com/nickn1121/verified-excess-checker/b600d705df19191f9bd1cc2e2b80930cb37259e9/logo.png" alt="">
+          </div>
+          <h3 class="title">Auto IC Source Uploader</h3>
+        </div>
+        <div class="desc">Upload parts lists or links and auto-collect supplier offers for IC sourcing.</div>
+        <div class="row">
+          <span class="cta" style="opacity:.6;pointer-events:none">Open tool →</span>
+          <span class="tag soon">Coming soon</span>
+        </div>
+      </article>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
